--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   position: relative;
   min-height: 100vh;
-  background-color: #2f3337;
+  background-color: #2f3337
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    monospace
 }
